[package]
name = "kodegen_config_manager"
version = "0.1.0"
edition = "2024"
description = "KODEGEN.ᴀɪ: Configuration management infrastructure for MCP tool servers."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-config-manager"
readme = "README.md"
categories = ["development-tools"]
keywords = ["kodegen", "config", "mcp"]
license = "Apache-2.0 OR MIT"

[dependencies]
# Core KODEGEN dependencies
kodegen_mcp_tool = { version = "0.1" }
kodegen_mcp_schema = { version = "0.1" }

# MCP protocol types (for ClientInfo)
rmcp = { version = "0.8", features = ["schemars"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Process management
sysinfo = "0.37"

# Cross-platform compatibility
dirs = "6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Synchronization
parking_lot = "0.12"

# Logging
log = "0.4"

[lib]
name = "kodegen_config_manager"
path = "src/lib.rs"
