[package]
name = "kodegen_tools_config"
version = "0.1.9"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-tools-config"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[package.metadata.bundle]
identifier = "ai.kodegen.kodegen_tools_config"
publisher = "KODEGEN.ᴀɪ"
copyright = "Copyright © 2025"
short_description = "Memory-efficient, Blazing-Fast, MCP tools for code generation agents."

[package.metadata.bundle.category]
linux = "Development"
macos = "public.app-category.developer-tools"


[dependencies]
kodegen_mcp_tool = { version = "0.1" }
kodegen_mcp_schema = { version = "0.1" }
kodegen_utils = { version = "0.1" }
kodegen_server_http = { version = "0.1" }
kodegen_config_manager = { version = "0.1" }

# MCP SDK - for Tool implementation and HTTP server
rmcp = { version = "0.8", features = ["client", "schemars", "server", "transport-streamable-http-server"]}

# Logging
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation
schemars = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Process management
sysinfo = "0.37"

# String manipulation and search
regex = "1"
grep = "0.4"           # Ripgrep library for fast line-oriented regex searching
ignore = "0.4"      # Directory walking with .gitignore support

# Cross-platform compatibility
dirs = "6"

# Template engine and frontmatter parsing
minijinja = "2"
gray_matter = "0.3"

# HTTP for potential future features
reqwest = { version = "0.12", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Base64 encoding/decoding
base64 = "0.22"

mime_guess = "2"
once_cell = "1"
parking_lot = "0.12"

[dev-dependencies]
kodegen_mcp_client = { version = "0.1"  }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "kodegen_tools_config"
path = "src/lib.rs"

[[bin]]
name = "kodegen-config"
path = "src/main.rs"
